fixed cells, added table snap scrolling on mobile

--- a/components/table/cell/cell.scss
+++ b/components/table/cell/cell.scss
@@ -8,4 +8,9 @@
   align-items: center;
 
   margin-bottom: $base * 2;
+
+  p {
+    @include body-bold;
+    font-size: 20px;
+  }
 }
