--- a/components/table/table.scss
+++ b/components/table/table.scss
@@ -5,17 +5,35 @@
 
   display: grid;
   width: 100%;
-  grid-template-columns: 280px repeat(auto-fit, minmax(176px, 1fr));
-  grid-row-gap: $base * 2;
+  grid-template-columns: 50% auto;
+  column-gap: $base * 2;
+  row-gap: $base * 2;
   position: relative;
+
+  @include md {
+    grid-template-columns: 240px auto;
+    column-gap: $base * 3;
+  }
 
   .rows {
     display: grid;
     width: 100%;
     grid-column: 1 / span 5;
     grid-row: 2 / auto;
-    grid-row-gap: $base * 2;
+    row-gap: $base * 2;
     z-index: -1;
     position: absolute;
+  }
+
+  .columns {
+    display: flex;
+    justify-content: space-between;
+    grid-column: 2;
+    grid-row: 1 / -1;
+
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    overflow-x: scroll;
+    overflow-y: hidden;
   }
 }
